known bugs:
-

usage:
// init BookBeat, BookBeatJSON and BookBeatList instances
$this->bookbeat = new BookBeat();
$this->bookbeatjson = new BookBeatJSON();
$this->bookbeatlist = new BookBeatList();
		
// set json filename $arg1
$this->bookbeatjson->setFilename($arg1);

// wire up bookbeatjson object to bookbeatlist
$this->bookbeatlist->setBookBeatJSON($this->bookbeatjson);

// update bookbeatlist. this will collect the sales rank from amazon and update the json file.
// returning an array with the updated list
$result = $this->bookbeatlist->updateSalesRank();

// update bookbeatlist from JSON file cache. this will read the json file without scraping the web.
$result = $this->bookbeatlist->updateSalesRankFromJSON();

// reset JSON file
$this->bookbeatlist->resetJSON();

// add a book isbn, asin, is_author, author_name
$this->bookbeatlist->addBook($isbn,$asin,$is_author,$author_name);

// edit a book by isbn
$this->bookbeatlist->updateBook($isbn,$asin,$is_author,$author_name);

// load a book data
$this->book = $this->bookbeatlist->getBookbyIsbn($isbn);

// load all books data
$this->books = $this->bookbeatlist->getBooks();

// get timestamp
$result = $this->bookbeatlist->getTimestamp()