@@ -17,7 +17,7 @@ Feature: BB2
   Scenario: See data that helps me understand my sales                                                                                               # features/bb2.feature:5
     Given there is a "The Cucumber Book: Behaviour-Driven Development for Testers and Developers (Pragmatic Programmers)", which is listed on Amazon # FeatureContext::thereIsAWhichIsListedOnAmazon()
     When I view the BookBeat page                                                                                                                    # FeatureContext::iViewTheBookbeatPage()
-      │ <H1>Book Result</H1>Book Title: The Cucumber Book: Behaviour-Driven Development for Testers and Developers (Pragmatic Programmers)<br />Sales Rank: 339961<br />Number of Reviews: 24<br />Average Rating: 4.4<br />
+      │ <H1>Book Result</H1>Book Title: The Cucumber Book: Behaviour-Driven Development for Testers and Developers (Pragmatic Programmers)<br />Sales Rank: 83598<br />Number of Reviews: 24<br />Average Rating: 4.4<br />
     Then I should see "The Cucumber Book: Behaviour-Driven Development for Testers and Developers (Pragmatic Programmers)"                           # FeatureContext::iShouldSee()
     And I should see the Amazon sales rank of greater than 0                                                                                         # FeatureContext::iShouldSeeTheAmazonSalesRankOfGreaterThan()
     And I should see the number of reviews of 0 or greater                                                                                           # FeatureContext::iShouldSeeTheNumberOfReviewsOfOrGreater()
@@ -26,7 +26,7 @@ Feature: BB2
   Scenario: See data that helps me understand my sales                                                                       # features/bb2.feature:14
     Given there is a "BDD in Action: Behavior-driven development for the whole software lifecycle" which is listed on Amazon # FeatureContext::thereIsAWhichIsListedOnAmazon2()
     When I view the BookBeat page                                                                                            # FeatureContext::iViewTheBookbeatPage()
-      │ <H1>Book Result</H1>Book Title: BDD in Action: Behavior-driven development for the whole software lifecycle<br />Sales Rank: 637824<br />Number of Reviews: 29<br />Average Rating: 4.6<br />
+      │ <H1>Book Result</H1>Book Title: BDD in Action: Behavior-driven development for the whole software lifecycle<br />Sales Rank: 659207<br />Number of Reviews: 29<br />Average Rating: 4.6<br />
     Then I should see "BDD in Action: Behavior-driven development for the whole software lifecycle"                          # FeatureContext::iShouldSee()
     And I should see the Amazon sales rank of greater than 0                                                                 # FeatureContext::iShouldSeeTheAmazonSalesRankOfGreaterThan()
     And I should see the number of reviews of 0 or greater                                                                   # FeatureContext::iShouldSeeTheNumberOfReviewsOfOrGreater()
@@ -132,6 +132,21 @@ Feature: BB6
     When I load all books                                           # FeatureContext::iLoadAllBooks()
     Then I should get all isbns, asins, author names and is authors # FeatureContext::iShouldGetAllIsbnsAsinsAuthorNamesAndIsAuthors()
 
-16 scenarios (10 passed, 6 pending)
-74 steps (59 passed, 6 pending, 9 skipped)
-0m7.14s (7.70Mb)
+Feature: BB7
+  As an author I want to be able to see my book’ number reviewers, sales rank, ratings and comments via Amazon UK
+
+  Scenario: The Author can pull sales rank of the Author's selected books from Amazon UK # features/bb7.feature:4
+    Given there is a file "booklist.json" with ISBN numbers                              # FeatureContext::thereIsAFileWithIsbnNumbers()
+    When I pull the sales rank from Amazon UK                                            # FeatureContext::iPullTheSalesRankFromAmazonUk()
+    Then I should see the sales rank of each book from Amazon UK                         # FeatureContext::iShouldSeeTheSalesRankOfEachBookFromAmazonUk()
+    And the sales rank should be integer from Amazon UK                                  # FeatureContext::theSalesRankShouldBeIntegerFromAmazonUk()
+    And I should see number of reviews from Amazon UK                                    # FeatureContext::iShouldSeeNumberOfReviewsFromAmazonUk()
+    And the number of reviews should be integer from Amazon UK                           # FeatureContext::theNumberOfReviewsShouldBeIntegerFromAmazonUk()
+    And I should see average ratings from Amazon UK                                      # FeatureContext::iShouldSeeAverageRatingsFromAmazonUk()
+    And the average rating should be float from Amazon UK                                # FeatureContext::theAverageRatingShouldBeFloatFromAmazonUk()
+    And I should see a timestamp                                                         # FeatureContext::iShouldSeeATimestamp()
+    And the delta timestamp should be positive integer                                   # FeatureContext::theDeltaTimestampShouldBePositiveInteger()
+
+17 scenarios (11 passed, 6 pending)
+84 steps (69 passed, 6 pending, 9 skipped)
+0m10.08s (7.74Mb)
