@@ -4,14 +4,36 @@
             "isbn": "978-1473853331",
             "asin": "1473853338",
             "is_author": true,
-            "author_name": "Geri Walton"
+            "author_name": "Geri Walton",
+            "book_title": "Marie Antoinette's Confidante: The Rise and Fall of the Princesse de Lamballe",
+            "amazon": {
+                "sales_rank": 776741,
+                "num_reviews": 1,
+                "avg_ratings": 4
+            },
+            "amazon_uk": {
+                "sales_rank": 776741,
+                "num_reviews": 1,
+                "avg_ratings": 4
+            }
         },
         {
             "isbn": "978-0385489492",
             "asin": "0385489498",
             "is_author": false,
-            "author_name": "Antonia Fraser"
+            "author_name": "Antonia Fraser",
+            "book_title": "Marie Antoinette: The Journey",
+            "amazon": {
+                "sales_rank": 52123,
+                "num_reviews": 237,
+                "avg_ratings": 4.3
+            },
+            "amazon_uk": {
+                "sales_rank": 52123,
+                "num_reviews": 237,
+                "avg_ratings": 4.3
+            }
         }
     ],
-    "timestamp": "2016-12-02 19:24:25"
+    "timestamp": "2016-12-03 10:26:55"
 }
